# bbts

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  R.npy  README.md  TENSOR_IDS  TRA.db  a.sbbts.  arr1.npy  data.npy  dense  kernel_func.txt  main.cpp  matrix.npy  node.h  t.txt  tensor_commands.h  tensor_relation.txt  test.db  tos_id.txt  tra.db  transform.npy  u.npy
M/: csv_to_numpy_file.py  w1.npy  w2.npy  x.npy  y.npy
applications/: Applications.cmake  generate_bmm.cc  generate_cpmm.cc  node_cli.cc  print_commands.cc
applications/bmm/: CMakeLists.txt  generate_bmm.cc
applications/cpmm/: CMakeLists.txt  generate_cpmm.cc
applications/ffnn/: CMakeLists.txt  ffnn_activation_mult.cc  ffnn_add.cc  ffnn_back_mult.cc  ffnn_element_mult.cc  ffnn_element_mult.h  ffnn_lib_init.cc  ffnn_mat_mul_lhs_transpose.cc  ffnn_mat_mul_lhs_transpose.h  ffnn_mat_mul_rhs_transpose.cc  ffnn_mat_mul_rhs_transpose.h  ffnn_matrix_hadamard.cc  ffnn_mult.cc  ffnn_relu.cc  ffnn_relu.h  ffnn_relu_diff.cc  ffnn_relu_diff.h  ffnn_scale_mul.cc  ffnn_scale_mul.h  ffnn_sigmoid.cc  ffnn_sigmoid.h  ffnn_subtract.cc  ffnn_subtract.h  ffnn_types.cc  ffnn_uniform_data.cc  ffnn_uniform_sparse_data.cc  ffnn_uniform_weights.cc  ffnn_weighted_sum_sparse_dense.h  generate_ffnn.cc  tempCodeRunnerFile.cc
applications/ffnn-gpu/: CMakeLists.txt  ffnn_activation_mult.cu  ffnn_activation_mult.h  ffnn_add.cu  ffnn_add.h  ffnn_back_mult.cu  ffnn_back_mult.h  ffnn_lib_init.cc  ffnn_matrix_hadamard.cu  ffnn_matrix_hadamard.h  ffnn_mult.cc  ffnn_types.cc  ffnn_uniform_data.cc  ffnn_uniform_data.h  ffnn_uniform_sparse_data.cc  ffnn_uniform_sparse_data.h  ffnn_uniform_weights.cc  ffnn_uniform_weights.h  ffnn_weighted_sum.cu  ffnn_weighted_sum.h  generate_ffnn.cc
applications/fnn/: CMakeLists.txt  ffn_lib_init.cc  ffnn_activation_mult.cc  ffnn_add.cc  ffnn_add.h  ffnn_back_mult.cc  ffnn_dense.cc  ffnn_dense.h  ffnn_lib_init.cc  ffnn_matrix_hadamard.cc  ffnn_mult.cc  ffnn_mult.h  ffnn_relu.cc  ffnn_relu.h  ffnn_relu_dif.cc  ffnn_relu_dif.h  ffnn_sigmoid.cc  ffnn_sigmoid.h  ffnn_types.h  ffnn_uniform_data.cc  ffnn_uniform_weights.cc  ffnn_weighted_sum.cc  ffnn_weighted_sum_sparse_dense.cc  generate_ffnn.cc
applications/matrix_addition/: CMakeLists.txt  generate_matrix_addition.cc
applications/mm_single_node/: CMakeLists.txt  generate_single_node_mm.cc
applications/multiplication_chain/: CMakeLists.txt  generate_multiplication_chain.cc
applications/node/: CMakeLists.txt  node_cli.cc
applications/tra_node/: 2_layer_ffnn.txt  CMakeLists.txt  sqlite3_ops.cc  sqliteTest.cc  tra_node_cli.cc  user manual.txt
applications/tra_operations/: CMakeLists.txt  generate_tra_operations.cc
bld/: Makefile  config.status  libtool  qlite3  sqlite3.pc
bld/.deps/: sqlite3-shell.Po  sqlite3-sqlite3.Po  sqlite3.Plo
cmake/: FindMKL.cmake  Findcurand.cmake
commands/: tensor_commands.h
integration_tests/: Integration.cmake  test_broadcast.cc  test_communicator.cc  test_move.cc  test_node.cc  test_reduce.cc  test_simulated_bmm.cc  test_simulated_cmm.cc
libraries/: Libraries.cmake  blob.cc
scripts/: profile_flamegraph.sh  profile_on_gpu.sh  run_integration.sh  run_nvidia_profile.sh  run_on_gpu.sh
server/: node_main.cc
src/commands/: abstract_command.h  command.h  command_compiler.h  command_loader.h  command_profiler.h  command_runner.cc  command_runner.h  command_utils.h  commands.h  compile_source_file.h  cost_model.h  parsed_command.h  reservation_station.cc  reservation_station.h  scheduler.cc  scheduler.h  tempCodeRunnerFile.h  tensor_commands.h  tensor_notifier.cc  tensor_notifier.h  tensor_stats.h  two_layer_compiler.h
src/communication/: communicator.cc  communicator.h
src/main/: node_main.cc
src/operations/: broadcast_op.cc  broadcast_op.h  local_reduce_op.cc  local_reduce_op.h  move_op.cc  move_op.h  reduce_op.cc  reduce_op.h
src/server/: coordinator.cc  coordinator.h  coordinator_ops.h  logger.h  node.cc  node.h  node_config.h  node_main.cc  static_config.h
src/storage/: block_allocator.h  memory_storage.cc  memory_storage.h  nvme_storage.cc  nvme_storage.h  storage.cc  storage.h
src/tensor/: builtin_formats.cc  builtin_formats.h  tensor.h  tensor_factory.cc  tensor_factory.h
src/ud_functions/: builtin_functions.cc  builtin_functions.h  gpu_scheduler.cc  gpu_scheduler.h  gpu_scheduler_impl.cc  gpu_scheduler_impl.h  null_gpu_scheduler.h  ud_function.cc  ud_function.h  udf_manager.cc  udf_manager.h
src/ud_functions/builtin/: dense_matrix_add.cc  dense_matrix_add.h  dense_matrix_mult.cc  dense_matrix_mult.h  dense_uniform.cc  dense_uniform.h
src/ud_functions/impls/: dense_matrix_add.cc  dense_matrix_add.h  dense_matrix_gpu_add.cu  dense_matrix_gpu_add.h  dense_matrix_gpu_mult.cu  dense_matrix_gpu_mult.h  dense_matrix_hadamard.cc  dense_matrix_hadamard.h  dense_matrix_mult.cc  dense_matrix_mult.h  dense_matrix_relu.cc  dense_matrix_relu.h  dense_matrix_relu_dif.cc  dense_matrix_relu_dif.h  dense_matrix_sigmoid.cc  dense_matrix_sigmoid.h  dense_matrix_weighted_sum.cc  dense_matrix_weighted_sum.h  dense_uniform.cc  dense_uniform.h
src/utils/: concurent_queue.h  raw_vector.h  terminal_color.h
src/web/: web_server.h
tensor/: builtin_formats.cc  builtin_formats.h  tensor.cc  tensor.h  tensor_factory.cc  tensor_factory.h
tensors/: filelist.txt  t0  t1  t10  t11  t12  t13  t14  t15  t16  t17  t18  t19  t2  t20  t21  t22  t23  t24  t3  t4  t5  t6  t7  t8  t9
tests/: Tests.cmake  test_bench_uds.cc  test_built_ud.cc  test_builtin_dense.cc  test_builtin_ud.cc  test_builtin_ud_gpu.cc  test_builtin_ud_gpu.cu  test_builtin_up_gpu.cc  test_command_compiler.cc  test_concurent_cublas.cu  test_gpu_scheduler.cu  test_matrix_multiply.cc  test_parsed_command.cc  test_reservation_station.cc  test_serial_cublas.cu  test_storage.cc  test_two_phase_command_compiler.cc  test_ud_function.cc
ud_functions/: builtin_functions.cc  builtin_functions.h  ud_function.h
www/: index.html  index.js  timeline.html
